# RubiCsBash

./: .gitignore  README.md
src/: CMakeLists.txt  constants.h  rubiks_start.c  rubiks_start.h  rubiks_view.c
src/server/: CMakeLists.txt  encoding.c  encoding.h  rubiks_client.c  rubiks_client.h  rubiks_server.c  rubiks_server.h  run_client.c  run_server.c  server_util.c  server_util.h
test/: CMakeLists.txt  test_encoding.c  test_rubiks_client.c  test_rubiks_server.c  test_rubiks_start.c  test_server_util.c
